tests/mlir/snapshots/mlir__simple__add.snap
---
source: tests/mlir/simple.rs
expression: output
---
module {
  func.func @main() -> i32 {
    %c10_i32 = arith.constant 10 : i32
    %c32_i32 = arith.constant 32 : i32
    %0 = arith.addi %c10_i32, %c32_i32 : i32
    return %0 : i32
  }
}
