tests/mlir/snapshots/mlir__simple__constant.snap
---
source: tests/mlir/simple.rs
expression: output
---
module {
  func.func @main() -> i32 {
    %c42_i32 = arith.constant 42 : i32
    return %c42_i32 : i32
  }
}
