tests/mlir/snapshots/mlir__simple__cpu_memory_allocation.snap
---
source: tests/mlir/simple.rs
assertion_line: 85
expression: output
---
module {
  func.func @main() {
    %alloca = memref.alloca() : memref<16xi16>
    %alloca_0 = memref.alloca() : memref<16xi16>
    %alloca_1 = memref.alloca() : memref<16xi16>
    return
  }
}
