tests/mlir/snapshots/mlir__simple__for_loop.snap
---
source: tests/mlir/simple.rs
expression: output
---
module {
  func.func @main() -> i32 {
    %c0_i32 = arith.constant 0 : i32
    %c0 = arith.constant 0 : index
    %c10 = arith.constant 10 : index
    %c1 = arith.constant 1 : index
    %0 = scf.for %arg0 = %c0 to %c10 step %c1 iter_args(%arg1 = %c0_i32) -> (i32) {
      %c1_i32 = arith.constant 1 : i32
      %1 = arith.addi %arg1, %c1_i32 : i32
      scf.yield %1 : i32
    }
    return %0 : i32
  }
}
