tests/mlir/snapshots/mlir__simple__gpu_mem.snap
---
source: tests/mlir/simple.rs
assertion_line: 4
expression: output
---
module {
  func.func @add(%arg0: memref<16xi16, #hivm.address_space<gm>>, %arg1: memref<16xi16, #hivm.address_space<gm>>, %arg2: memref<16xi16, #hivm.address_space<gm>>) {
    return
  }
}
