tests/mlir/snapshots/mlir__simple__if_only.snap
---
source: tests/mlir/simple.rs
expression: output
---
module {
  func.func @main() -> i32 {
    %c10_i32 = arith.constant 10 : i32
    %c5_i32 = arith.constant 5 : i32
    %0 = arith.cmpi sgt, %c10_i32, %c5_i32 : i32
    scf.if %0 {
      %c2_i32 = arith.constant 2 : i32
      %1 = arith.muli %c10_i32, %c2_i32 : i32
    } else {
    }
    %c42_i32 = arith.constant 42 : i32
    return %c42_i32 : i32
  }
}
