tests/mlir/snapshots/mlir__simple__lit.snap
---
source: tests/mlir/simple.rs
expression: output
---
module {
  func.func @main() -> i32 {
    %true = arith.constant true
    %false = arith.constant false
    %c42_i32 = arith.constant 42 : i32
    %c-1_i8 = arith.constant -1 : i8
    %c-1_i32 = arith.constant -1 : i32
    %c-1_i64 = arith.constant -1 : i64
    %cst = arith.constant 3.140000e+00 : f32
    %cst_0 = arith.constant 2.7182818284590451 : f64
    return %c42_i32 : i32
  }
}
