tests/mlir/snapshots/mlir__simple__no_main.snap
---
source: tests/mlir/simple.rs
assertion_line: 6
expression: output
---
module {
  func.func @helper() -> i32 {
    %c42_i32 = arith.constant 42 : i32
    return %c42_i32 : i32
  }
  func.func @another_function(%arg0: i32) -> i32 {
    %0 = call @helper() : () -> i32
    %1 = arith.addi %arg0, %0 : i32
    return %1 : i32
  }
}
